[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprites/arrow.png" type="Texture" id=1]
[ext_resource path="res://Card.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45.0714, 45.1439 )

[node name="Card" type="Node2D"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 90.0
margin_bottom = 90.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrows" type="Control" parent="Panel"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="ArrowRight" type="TextureRect" parent="Panel/Arrows"]
modulate = Color( 0.709804, 0, 0, 1 )
margin_left = 72.2346
margin_top = 34.9228
margin_right = 102.235
margin_bottom = 64.9228
rect_scale = Vector2( 0.6, 0.6 )
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowDown" type="TextureRect" parent="Panel/Arrows"]
modulate = Color( 0.709804, 0, 0, 1 )
margin_left = 53.7732
margin_top = 72.0283
margin_right = 83.7732
margin_bottom = 102.028
rect_rotation = 90.0
rect_scale = Vector2( 0.6, 0.6 )
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowLeft" type="TextureRect" parent="Panel/Arrows"]
modulate = Color( 0.709804, 0, 0, 1 )
margin_left = 18.4535
margin_top = 51.9953
margin_right = 48.4536
margin_bottom = 81.9953
rect_rotation = 180.0
rect_scale = Vector2( 0.6, 0.6 )
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowUp" type="TextureRect" parent="Panel/Arrows"]
modulate = Color( 0.709804, 0, 0, 1 )
margin_left = 36.9071
margin_top = 17.8583
margin_right = 66.9071
margin_bottom = 47.8583
rect_rotation = 270.0
rect_scale = Vector2( 0.6, 0.6 )
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardColor" type="ColorRect" parent="Panel"]
margin_left = 25.4846
margin_top = 23.3609
margin_right = 65.4846
margin_bottom = 63.3609
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardArea"]
position = Vector2( 44.834, 45.07 )
shape = SubResource( 1 )

[connection signal="input_event" from="CardArea" to="." method="_on_CardArea_input_event"]
